--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@3.10
+  hmpps: ministryofjustice/hmpps@3.11
   browser-tools: circleci/browser-tools@1.1.3
 
 jobs:
@@ -149,10 +149,10 @@ workflows:
           requires:
             - request-prod-approval
 
-  scheduled:
+  security:
     triggers:
       - schedule:
-          cron: "0 7 * * 1-5"
+          cron: "4 5 * * 1-5"
           filters:
             branches:
               only:
@@ -161,4 +161,27 @@ workflows:
       - hmpps/gradle_owasp_dependency_check:
           slack_channel: pecs-dev
           context:
+            - hmpps-common-vars
+      - hmpps/trivy_latest_scan:
+          slack_channel: pecs-dev
+          context:
+            - hmpps-common-vars
+      - hmpps/veracode_pipeline_scan:
+          slack_channel: pecs-dev
+          context:
+            - veracode-credentials
+            - hmpps-common-vars
+  security-weekly:
+    triggers:
+      - schedule:
+          cron: "28 6 * * 1"
+          filters:
+            branches:
+              only:
+                - main
+    jobs:
+      - hmpps/veracode_policy_scan:
+          slack_channel: pecs-dev
+          context:
+            - veracode-credentials
             - hmpps-common-vars
