P4-3122 small addition to notify pecs-digital of prod releases.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,6 +143,7 @@ workflows:
           name: deploy_prod
           env: "prod"
           slack_notification: true
+          slack_channel_name: pecs-digital
           context:
             - hmpps-common-vars
             - calculate-journey-variable-payments-prod
