--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -14,6 +14,9 @@ db:
 sentry:
   secret_name: calculate-journey-variable-payments-sentry
 
+feedback:
+  secret_name: calculate-journey-variable-payments-feedback
+
 ingress:
   enabled: true
   enable_whitelist: false
