--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,7 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/app
-      - browser-tools/install-browser-tools:
-          chrome-version: 91.0.4472.164
+      - browser-tools/install-browser-tools
       - run:
           name: Wait for auth
           command: dockerize -wait http://localhost:9090/auth/health -timeout 1m
