P4 3149 moving creation of session tables into the baseline SQL file. Upgrade to later version of Spring is conflicting with Flyway history table creation.

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -23,6 +23,10 @@ spring:
       resourceserver:
         jwt:
           issuer-uri:
+  session:
+    store-type: jdbc
+    jdbc:
+      initialize-schema: embedded
 
 server:
   port: 8080
