P4-3149 attempt at resolving out of memory error in build pipeline.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
     executor:
       name: hmpps/java
       tag: "11.0"
+    environment:
+      _JAVA_OPTIONS: -Xmx512m -XX:ParallelGCThreads=2 -XX:ConcGCThreads=2 -Djava.util.concurrent.ForkJoinPool.common.parallelism=2 -Dorg.gradle.daemon=false
+
     steps:
       - checkout
       - restore_cache:
@@ -16,7 +19,7 @@ jobs:
             - gradle-{{ checksum "build.gradle.kts" }}
             - gradle-
       - run:
-          command: ./gradlew -Dorg.gradle.jvmargs="--illegal-access=permit" -Dkotlin.daemon.jvm.options="--illegal-access=permit" build
+          command: ./gradlew build
       - save_cache:
           paths:
             - ~/.gradle
