--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -33,7 +33,7 @@ env:
   CRON_IMPORT_REPORTS: "0 30 5 * * ?"
   SENTRY_ENVIRONMENT: preprod
   BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-preprod.apps.live-1.cloud-platform.service.justice.gov.uk"
-  FEATURE_FLAG_PRICE_EXCEPTIONS: false
+  FEATURE_FLAG_PRICE_EXCEPTIONS: "false"
 
 #whitelist:
 #  office: "217.33.148.210/32"
