P4-3212 changing to more direct id based verification instead of very general page source verfication.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,6 +16,7 @@ BASM_API_BASE_URL: http://localhost:9999
 BASM_BUCKET_NAME: basm
 CRON_AUTOMATIC_LOCATION_MAPPING: "-"
 CRON_IMPORT_REPORTS: "-"
+FEATURE_FLAG_PRICE_EXCEPTIONS: "true"
 HMPPS_AUTH_BASE_URI: http://localhost:9090/auth
 HMPPS_AUTH_CLIENT_ID: pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET: clientsecret
