P4-3246 securing the cookie to prevent submission over non-secure requests.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,6 +8,12 @@ spring:
     enabled: true
     locations: classpath:/db/migration
 
+server:
+  servlet:
+    session:
+      cookie:
+        secure: false
+
 APP_DB_URL: "jdbc:postgresql://127.0.0.1:5433/jpc?reWriteBatchedInserts=true&user=jpc&password=letmein"
 AWS_ACCESS_KEY_ID: foo
 AWS_SECRET_ACCESS_KEY: bar
