--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -33,7 +33,7 @@ env:
   CRON_IMPORT_REPORTS: "0 30 5 * * ?"
   SENTRY_ENVIRONMENT: prod
   BASM_API_BASE_URL: "https://api.bookasecuremove.service.justice.gov.uk"
-  FEATURE_FLAG_PRICE_EXCEPTIONS: "false"
+  FEATURE_FLAG_PRICE_EXCEPTIONS: "true"
 
 #whitelist:
 #  office: "217.33.148.210/32"
