--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -31,6 +31,6 @@ env:
   HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments-dev.apps.live-1.cloud-platform.service.justice.gov.uk"
   CRON_AUTOMATIC_LOCATION_MAPPING: "0 30 13 * * ?"
   CRON_IMPORT_REPORTS: "0 30 5 * * ?"
-  CRON_BACKFILL_REPORTS: "-"
+  CRON_BACKFILL_REPORTS: "0 40 10 24 JAN ?"
   SENTRY_ENVIRONMENT: dev
   BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-staging.apps.live-1.cloud-platform.service.justice.gov.uk"
