--- a/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
@@ -18,7 +18,7 @@ metadata:
     {{ if .Values.ingress.enable_whitelist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.whitelist | quote }}{{ end }}
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
     external-dns.alpha.kubernetes.io/set-identifier: {{ $fullName }}-{{ .Release.Namespace }}-{{ $clusterColour }}
-    external-dns.alpha.kubernetes.io/aws-weight: {{ $awsWeight }}
+    external-dns.alpha.kubernetes.io/aws-weight: {{ $awsWeight | quote }}
 spec:
   tls:
   {{- range .Values.ingress.hosts }}
