--- a/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
@@ -17,7 +17,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     {{ if .Values.ingress.enable_whitelist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.whitelist | quote }}{{ end }}
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
-    external-dns.alpha.kubernetes.io/set-identifier: {{ $fullName }}-{{ .Release.Namespace }}-{{ $clusterColour }}
+    external-dns.alpha.kubernetes.io/set-identifier: {{ print $fullName "-" .Release.Namespace "-" $clusterColour }}
     external-dns.alpha.kubernetes.io/aws-weight: {{ $awsWeight | quote }}
 spec:
   tls:
