--- a/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "app.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
-{{- $cluster := default "live-1" .Values.ingress.cluster -}}
+{{- $cluster := default "live" .Values.ingress.cluster -}}
 {{- $clusterColour := ternary "green" "blue" (eq $cluster "live") -}}
 {{- $awsWeight := default "100" .Values.ingress.aws_weight -}}
 apiVersion: networking.k8s.io/v1beta1
