--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ BASM_BUCKET_NAME=basm
 CRON_AUTOMATIC_LOCATION_MAPPING=-
 CRON_IMPORT_REPORTS=-
 CRON_BACKFILL_REPORTS-
+CRON_REPROCESS_EXISTING_MOVES-
 HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
 HMPPS_AUTH_CLIENT_ID=pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET=clientsecret
