--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -33,6 +33,7 @@ env:
   CRON_AUTOMATIC_LOCATION_MAPPING: "0 30 3 * * ?"
   CRON_IMPORT_REPORTS: "0 30 5 * * ?"
   CRON_BACKFILL_REPORTS: "-"
+  CRON_REPROCESS_EXISTING_MOVES: "-"
   SENTRY_ENVIRONMENT: preprod
   BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-preprod.apps.live-1.cloud-platform.service.justice.gov.uk"
 
