--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,3 +3,4 @@ HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
 CRON_IMPORT_REPORTS=-
 CRON_AUTOMATIC_LOCATION_MAPPING=-
 CRON_BACKFILL_REPORTS=-
+CRON_REPROCESS_EXISTING_MOVES=-
