--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -33,6 +33,6 @@ env:
   CRON_AUTOMATIC_LOCATION_MAPPING: "0 30 13 * * ?"
   CRON_IMPORT_REPORTS: "0 30 5 * * ?"
   CRON_BACKFILL_REPORTS: "-"
-  CRON_REPROCESS_EXISTING_MOVES: "0 30 15 11 MAR ?"
+  CRON_REPROCESS_EXISTING_MOVES: "-"
   SENTRY_ENVIRONMENT: dev
   BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-staging.apps.live-1.cloud-platform.service.justice.gov.uk"
