--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ BASM_API_BASE_URL=http://localhost:9999
 BASM_BUCKET_NAME=basm
 CRON_AUTOMATIC_LOCATION_MAPPING=-
 CRON_IMPORT_REPORTS=-
-CRON_BACKFILL_REPORTS-
-CRON_REPROCESS_EXISTING_MOVES-
+CRON_BACKFILL_REPORTS=-
+CRON_REPROCESS_EXISTING_MOVES=-
 HMPPS_AUTH_BASE_URI=http://localhost:9090/auth
 HMPPS_AUTH_CLIENT_ID=pecs-jpc-client
 HMPPS_AUTH_CLIENT_SECRET=clientsecret
