--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -28,3 +28,4 @@ IMPORT_FILES_PRICES_SERCO: serco_sample.xlsx
 JPC_BUCKET_NAME: jpc
 SENTRY_ENVIRONMENT: local
 S3_ENDPOINT: http://localhost:4572
+FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: true
