--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -36,6 +36,7 @@ env:
   CRON_REPROCESS_EXISTING_MOVES: "-"
   SENTRY_ENVIRONMENT: preprod
   BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-preprod.apps.live-1.cloud-platform.service.justice.gov.uk"
+  FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "true"
 
 #whitelist:
 #  office: "217.33.148.210/32"
