--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,3 +4,4 @@ CRON_IMPORT_REPORTS=-
 CRON_AUTOMATIC_LOCATION_MAPPING=-
 CRON_BACKFILL_REPORTS=-
 CRON_REPROCESS_EXISTING_MOVES=-
+FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES=false
