P4-3722 adding new env var to support auto backdating of reports data - WIP

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,3 +5,4 @@ CRON_AUTOMATIC_LOCATION_MAPPING=-
 CRON_BACKFILL_REPORTS=-
 CRON_REPROCESS_EXISTING_MOVES=-
 FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES=false
+IMPORT_REPORTS_BACKDATE_ENABLED=false
