--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -37,3 +37,4 @@ env:
   SENTRY_ENVIRONMENT: dev
   BASM_API_BASE_URL: "https://hmpps-book-secure-move-api-staging.apps.live-1.cloud-platform.service.justice.gov.uk"
   FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "true"
+  IMPORT_REPORTS_BACKDATE_ENABLED: "true"
