--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -37,6 +37,7 @@ env:
   SENTRY_ENVIRONMENT: prod
   BASM_API_BASE_URL: "https://api.bookasecuremove.service.justice.gov.uk"
   FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "false"
+  IMPORT_REPORTS_BACKDATE_ENABLED: "true"
 
 #whitelist:
 #  office: "217.33.148.210/32"
