--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ HMPPS_AUTH_REDIRECT_BASE_URI=http://localhost:8080
 IMPORT_FILES_LOCATIONS=schedule_34_locations_sample.xlsx
 IMPORT_FILES_PRICES_GEO=geoamey_sample.xlsx
 IMPORT_FILES_PRICES_SERCO=serco_sample.xlsx
+IMPORT_REPORTS_BACKDATE_ENABLED=false
 JPC_BUCKET_NAME=jpc
 SENTRY_ENVIRONMENT=local
 S3_ENDPOINT=http://localhost:4572
