--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -31,9 +31,9 @@ env:
   HMPPS_AUTH_BASE_URI: "https://sign-in.hmpps.service.justice.gov.uk/auth"
   HMPPS_AUTH_REDIRECT_BASE_URI: "https://calculate-journey-variable-payments.hmpps.service.justice.gov.uk"
   CRON_AUTOMATIC_LOCATION_MAPPING: "0 30 3 * * ?"
-  CRON_IMPORT_REPORTS: "0 30 5 * * ?"
+  CRON_IMPORT_REPORTS: "-"
   CRON_BACKFILL_REPORTS: "-"
-  CRON_REPROCESS_EXISTING_MOVES: "0 0 13 21 MAR ?"
+  CRON_REPROCESS_EXISTING_MOVES: "-"
   SENTRY_ENVIRONMENT: prod
   BASM_API_BASE_URL: "https://api.bookasecuremove.service.justice.gov.uk"
   FEATURE_FLAG_INCLUDE_RECONCILIATION_MOVES: "false"
