--- a/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
@@ -7,19 +7,19 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ $fullName "-new" }}
   labels:
     app: {{ template "app.name" . }}
     chart: {{ template "app.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     {{ if .Values.ingress.enable_whitelist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.whitelist | quote }}{{ end }}
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
-    external-dns.alpha.kubernetes.io/set-identifier: {{ print $fullName "-" .Release.Namespace "-" $clusterColour }}
+    external-dns.alpha.kubernetes.io/set-identifier: {{ print $fullName "-new-" .Release.Namespace "-" $clusterColour }}
     external-dns.alpha.kubernetes.io/aws-weight: {{ $awsWeight | quote }}
 spec:
+  ingressClassName: default
   tls:
   {{- range .Values.ingress.hosts }}
   - hosts:
