--- a/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/templates/ingress.yaml
@@ -7,7 +7,7 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: {{ $fullName "-new" }}
+  name: {{ print $fullName "-new" }}
   labels:
     app: {{ template "app.name" . }}
     chart: {{ template "app.chart" . }}
