MAP-149 Remove use of AWS access keys

--- a/helm_deploy/calculate-journey-variable-payments/templates/deployment.yaml
+++ b/helm_deploy/calculate-journey-variable-payments/templates/deployment.yaml
@@ -26,6 +26,7 @@ spec:
         app: {{ template "app.name" . }}
         release: {{ .Release.Name }}
     spec:
+      serviceAccountName: calculate-journey-variable-payments
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
