--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,7 @@ jobs:
       - browser-tools/install-browser-tools:
           install-firefox: false
           install-geckodriver: false
+          replace-existing-chrome: true
           chrome-version: 114.0.5735.198
       - run:
           name: Wait for auth
